# puslegen-technologies-assignment-submission

./: .gitignore  README.md  backfill_days.py  pyproject.toml  rest_db.py  test_consolidator.py  test_daily_counter.py  test_daily_loader.py  test_normalizer.py  test_topic_proposer.py  test_trend_report.py
agent/: agent_state.py  nodes.py
data/: data_access.py  data_scraper.py  fix_duplicates.py
db/: experiment.ipynb  schema_setup.py
pipeline/consolidation/: consolidator.py  embedder.py
pipeline/ingestion/: daily_loader.py
pipeline/normalization/: normalizer.py  rules.py
pipeline/reporting/: daily_counter.py  trend_report.py
pipeline/topic_proposal/: proposer.py
